--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
-    "stripe": "^11.16.0"
+    "stripe": "^11.16.0",
+    "uuid": "^9.0.0"
   }
 }
